--- a/main.html
+++ b/main.html
@@ -7,6 +7,11 @@
 </head>
 
 <body>
+		<label for="name">First Nmae:</label>
+		<input type="text"id="name"name="name" onclick="functionName()"><br>
+		<label for="last">last Nmae:</label>
+		<input type="text" 9d="last" nmae="last" onclick="Acciojob()"><br>
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
